// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boxHeight renders 0 1`] = `
Array [
  .c0 {
  box-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 0;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders function 1`] = `
Array [
  .c0 {
  box-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: has;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: has;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders invalid theme path 1`] = `
Array [
  .c0 {
  box-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders negative number 1`] = `
Array [
  .c0 {
  box-height: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    box-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    box-height: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-height: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-height: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    box-height: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    box-height: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    box-height: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    box-height: July;
  }
}

@media April {
  .c0 {
    box-height: August;
  }
}

@media January {
  .c0 {
    box-height: September;
  }
}

@media April {
  .c0 {
    box-height: November;
  }
}

@media June {
  .c0 {
    box-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    box-height: July;
  }
}

@media April {
  .c0 {
    box-height: August;
  }
}

@media January {
  .c0 {
    box-height: September;
  }
}

@media April {
  .c0 {
    box-height: November;
  }
}

@media June {
  .c0 {
    box-height: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-height: January;
  }
}

@media April {
  .c0 {
    box-height: December;
  }
}

@media January {
  .c0 {
    box-height: April;
  }
}

@media April {
  .c0 {
    box-height: May;
  }
}

@media June {
  .c0 {
    box-height: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    box-height: January;
  }
}

@media April {
  .c0 {
    box-height: December;
  }
}

@media January {
  .c0 {
    box-height: April;
  }
}

@media April {
  .c0 {
    box-height: May;
  }
}

@media June {
  .c0 {
    box-height: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders postitive number 1`] = `
Array [
  .c0 {
  box-height: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders string 1`] = `
Array [
  .c0 {
  box-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: July;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: June;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: June;
}

<div
    className="c0"
  />,
]
`;

exports[`boxHeight renders valid theme path 1`] = `
Array [
  .c0 {
  box-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  box-height: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
